--- a/harness.yml
+++ b/harness.yml
@@ -64,7 +64,7 @@ attributes:
       ingress:
         enabled: true
         hosts:
-          - = 'gateway-' ~ @('hostname')
+          - = @('hostname')
   service: {}
   environment:
     local:
