--- a/harness.yml
+++ b/harness.yml
@@ -37,7 +37,7 @@ attributes:
       steps:
       - run yarn install
       - run yarn generate:types
-      - run yarn build:core
+      - run yarn generate:types:contract
       - run yarn build:deps
     gateway:
       build:
@@ -46,7 +46,8 @@ attributes:
       port: 4000
       resources:
         memory: 512MiB
-      env: ~
+      env:
+        GATEWAY_HOST: = 'gateway-' ~ @('hostname')
       secrets: ~
       ingress:
         enabled: true
@@ -60,7 +61,9 @@ attributes:
       port: 3000
       resources:
         memory: 512MiB
-      env: ~
+      env:
+        GATEWAY_SSR_URL: http://localhost:4000/graphql
+        CLIENT_HOST: = @('hostname')
       secrets: ~
       ingress:
         enabled: true
