--- a/helm/app/templates/client/service.yaml
+++ b/helm/app/templates/client/service.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app.service: {{ .Values.resourcePrefix }}viper-client
-  name: {{ .Values.resourcePrefix }}viper-client
+    app.service: {{ .Values.app.resourcePrefix }}viper-client
+  name: {{ .Values.app.resourcePrefix }}viper-client
 spec:
   ports:
   - name: http
     port: 80
-    targetPort: 3000
+    targetPort: {{ .Values.app.client.port }}
   selector:
-    app.service: {{ .Values.resourcePrefix }}viper-client
+    app.service: {{ .Values.app.resourcePrefix }}viper-client
 status:
   loadBalancer: {}
