--- a/helm/app/templates/client/ingress.yaml
+++ b/helm/app/templates/client/ingress.yaml
@@ -1,25 +1,33 @@
-{{ if eq .Values.ingress.type "standard" }}
+{{ if .Values.app.client.ingress.enabled }}
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-{{- if .Values.client.ingress.annotations }}
+{{- if .Values.app.client.ingress.annotations }}
   annotations:
   {{- range $key, $value := .Values.client.ingress.annotations }}
     {{ $key }}: {{ $value | quote }}
   {{- end }}
 {{- end }}
-  creationTimestamp: null
   labels:
-    app.service: {{ .Values.resourcePrefix }}viper-client
-  name: {{ .Values.resourcePrefix }}viper-client
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    app.service: {{ .Values.app.resourcePrefix }}viper-client
+{{- if .Values.app.client.ingress.labels }}
+{{- toYaml .Values.app.client.ingress.labels | nindent 4 }}
+{{- end }}
+  name: {{ .Values.app.resourcePrefix }}viper-client
 spec:
   rules:
-  - host: {{ index .Values "client" "environment" "APP_HOST" }}
-    http:
-      paths:
-      - backend:
-          serviceName: {{ .Values.resourcePrefix }}viper-client
-          servicePort: 80
+  {{- if .Values.app.client.ingress.hosts }}
+  {{- range $host := .Values.app.client.ingress.hosts }}
+    - host: {{ $host }}
+      http:
+        paths:
+          - backend:
+            serviceName: {{ $.Values.app.resourcePrefix }}viper-client
+            servicePort: 80
+  {{- end -}}
+  {{- end -}}
 status:
   loadBalancer: {}
 {{ end }}
