fix helm whitespace error in viper ingress

--- a/helm/app/templates/gateway/ingress.yaml
+++ b/helm/app/templates/gateway/ingress.yaml
@@ -27,7 +27,7 @@ spec:
             serviceName: {{ $.Values.app.resourcePrefix }}viper-gateway
             servicePort: 80
   {{- end -}}
-  {{- end -}}
+  {{- end }}
 status:
   loadBalancer: {}
 {{ end }}
