viper allow client and gateway to be started independently

--- a/docker/image/node/root/etc/supervisor/conf.d/client.conf
+++ b/docker/image/node/root/etc/supervisor/conf.d/client.conf
@@ -2,7 +2,7 @@
 directory=/app/app/client
 command=node ./node_modules/.bin/next dev
 user=node
-autostart=true
+autostart=%(ENV_SUPERVISOR_START_CLIENT)s
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
