--- a/docker/image/node/root/etc/supervisor/conf.d/gateway.conf
+++ b/docker/image/node/root/etc/supervisor/conf.d/gateway.conf
@@ -2,7 +2,7 @@
 directory=/app/app/gateway
 command=node dist/src/main.dev.js
 user=node
-autostart=true
+autostart=%(ENV_SUPERVISOR_START_GATEWAY)s
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
