--- a/harness/config/confd.yml
+++ b/harness/config/confd.yml
@@ -1,12 +1,12 @@
 
 confd('harness:/'):
-  # base templates
   - { src: docker/image/node/Dockerfile }
   - { src: docker/image/node/root/etc/supervisor/conf.d/client.conf }
   - { src: docker/image/node/root/lib/task/build.sh }
   - { src: docker/image/node/root/lib/task/build/gateway.sh }
   - { src: docker/image/node/root/lib/task/build/client.sh }
   - { src: application/overlay/Jenkinsfile }
+  - { src: application/overlay/.npmrc, dst: workspace:/.npmrc }
   - { src: application/overlay/.dockerignore, dst: workspace:/.dockerignore }
   - { src: application/overlay/app/client/config/default.js, dst: workspace:/app/client/config/default.js }
   - { src: application/skeleton/README.md }
