--- a/harness/config/confd.yml
+++ b/harness/config/confd.yml
@@ -10,6 +10,9 @@ confd('harness:/'):
   - { src: application/overlay/.dockerignore, dst: workspace:/.dockerignore }
   - { src: application/overlay/app/client/config/default.js, dst: workspace:/app/client/config/default.js }
   - { src: application/skeleton/README.md }
+  - { src: application/skeleton/package.json }
+  - { src: application/skeleton/app/gateway/package.json }
+  - { src: application/skeleton/app/client/package.json }
   - { src: mutagen.yml, dst: workspace:/mutagen.yml }
   - { src: docker-compose.yml, dst: workspace:/docker-compose.yml }
   - { src: helm/app/values.yaml }
