--- a/application/skeleton/app/gateway/config/services/services-app.yml
+++ b/application/skeleton/app/gateway/config/services/services-app.yml
@@ -29,6 +29,7 @@ services:
       - '@AuthService'
       - '@EcommService'
       - '@ConfigService'
+      - '@/CustomContent/Service/CustomContentService'
 
   ServicesKoa:
     class: //koa[default]
