--- a/application/skeleton/app/gateway/config/services/gateway-service.yml
+++ b/application/skeleton/app/gateway/config/services/gateway-service.yml
@@ -10,6 +10,9 @@ parameters:
     cors:
       maxAge: 86400
     gateway: ~
+    docs:
+      path: /api-docs
+      folder: ../../docs/api-docs
 
 services:
   /Gateway/GatewayService[GatewayService]:
