--- a/application/skeleton/app/gateway/config/services/routing-service.yml
+++ b/application/skeleton/app/gateway/config/services/routing-service.yml
@@ -7,7 +7,10 @@ services:
     class: //@inviqa/viper-gateway-service-routing[RoutingService]
     arguments:
       - '%routing.path%'
-      - './node_modules/@inviqa/viper-gateway-service-routing/src/typedef/schema.graphql'
+      - [
+          './node_modules/@inviqa/viper-gateway-service-routing/src/typedef/schema.graphql',
+          './src/Routing/typedef/custom-pages.graphql',
+        ]
       - '@RoutingResolverProvider'
       - '@CatalogRoutingDataSource'
       - '@ContentRoutingDataSource'
