Viper - use yarn to run apps (#4)
* update client start script

* update gateway start script

* Update client start script with flags to stop child processes

* Update gateway start script with flags to stop child processes

* Update client commands with new script names given directory

* Update gateway command with new script names given directory

--- a/docker/image/node/root/etc/supervisor/conf.d/gateway.conf
+++ b/docker/image/node/root/etc/supervisor/conf.d/gateway.conf
@@ -1,7 +1,11 @@
 [program:gateway]
-directory=/app/app/gateway
-command=node dist/src/main.dev.js
+directory=/app
+stopasgroup=true
+killasgroup=true
+stopsignal=TERM
+command=yarn workspace @inviqa/viper-app-gateway start
 user=node
+environment=HOME="/home/node",USER="node"
 autostart=%(ENV_SUPERVISOR_START_GATEWAY)s
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
