--- a/harness.yml
+++ b/harness.yml
@@ -49,7 +49,10 @@ attributes:
       - run yarn install
       - run yarn generate:types
       - run yarn build:deps
-      - run yarn run --cwd=app/client build:storybook
+      - |
+        if [ "$APP_DYNAMIC" == "no" ]; then
+          run yarn run --cwd=app/client build:storybook
+        fi
     resourcePrefix: ''
     gateway:
       build:
@@ -71,7 +74,10 @@ attributes:
       image: 
       build:
         steps:
-        - run yarn build:app:client
+        - |
+          if [ "$APP_DYNAMIC" == "no" ]; then
+            run yarn build:app:client
+          fi
       port: 3000
       resources:
         memory: 1024Mi
