--- a/harness.yml
+++ b/harness.yml
@@ -59,7 +59,7 @@ attributes:
       resources:
         memory: 512Mi
       env:
-        SUPERVISOR_START_GATEWAY: "true"
+        SUPERVISOR_START_GATEWAY: "false"
         GATEWAY_HOST: = 'gateway-' ~ @('hostname')
         # AUTH_TOKEN_SECRET: ~
       secrets: ~
@@ -76,7 +76,7 @@ attributes:
       resources:
         memory: 1024Mi
       env:
-        SUPERVISOR_START_CLIENT: "true"
+        SUPERVISOR_START_CLIENT: "false"
         GATEWAY_SSR_URL: http://localhost:4000/graphql
         CLIENT_HOST: = @('hostname')
       secrets: ~
