Revert "Add similar docker registry config to other harnesses"
This reverts commit 6428e64fa9248b872f1ebf024b2e16703153fd6f.

--- a/harness/attributes/common.yml
+++ b/harness/attributes/common.yml
@@ -32,7 +32,7 @@ attributes.default:
 
   docker:
     registry:
-      url: = get_docker_registry(@('docker.repository'))
+      url: ~
       username: ~
       password: ~
     repository: ~
