MISC: add TLS attributes to Ingress for LEtsEncrypt http certs

--- a/helm/app/templates/gateway/ingress.yaml
+++ b/helm/app/templates/gateway/ingress.yaml
@@ -28,6 +28,10 @@ spec:
               servicePort: 80
   {{- end -}}
   {{- end }}
+  {{- if .Values.app.gateway.ingress.tls }}
+  tls:
+  {{- toYaml .Values.app.gateway.ingress.tls | nindent 4 }}
+  {{- end }}
 status:
   loadBalancer: {}
 {{ end }}
