Viper - add TLS attributes to Ingress for LetsEncrypt http certs support (#11)
* Viper - add TLS attributes to Ingress for LetsEncrypt http certs support
* Viper - add default TLS values for use with LetsEncrypt http certs

--- a/harness.yml
+++ b/harness.yml
@@ -70,6 +70,10 @@ attributes:
         enabled: true
         hosts:
           - = 'gateway-' ~ @('hostname')
+        tls:
+          - hosts:
+            - = 'gateway-' ~ @('hostname')
+            secretName: viper-gateway-letsencrypt-http-cert
     client:
       image: 
       build:
@@ -90,6 +94,10 @@ attributes:
         enabled: true
         hosts:
           - = @('hostname')
+        tls:
+          - hosts:
+            - = 'gateway-' ~ @('hostname')
+            secretName: viper-client-letsencrypt-http-cert
   service: {}
   environment:
     preview:
