Update pipeline environments to default to prod config (#12)
Based on https://github.com/inviqa/viper/pull/744 using APP_ENV to toggle optional gateway DI config

--- a/application/skeleton/app/gateway/config/apps/services-app.yml
+++ b/application/skeleton/app/gateway/config/apps/services-app.yml
@@ -3,8 +3,8 @@ parameters:
     listen:
       port: 4100
     server:
-      playground: true
-      debug: true
+      playground: false
+      debug: false
 
 services:
   ServicesApp:
