--- a/helm/app/templates/client/ingress.yaml
+++ b/helm/app/templates/client/ingress.yaml
@@ -1,5 +1,5 @@
 {{ if .Values.app.client.ingress.enabled }}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
 {{- if .Values.app.client.ingress.annotations }}
@@ -17,20 +17,23 @@ metadata:
 {{- end }}
   name: {{ .Values.app.resourcePrefix }}viper-client
 spec:
+  {{- with (pick .Values.app.client.ingress "ingressClassName" "tls") }}
+  {{- . | toYaml | nindent 2 }}
+  {{- end }}
   rules:
   {{- if .Values.app.client.ingress.hosts }}
   {{- range $host := .Values.app.client.ingress.hosts }}
     - host: {{ $host }}
       http:
         paths:
-          - backend:
-              serviceName: {{ $.Values.app.resourcePrefix }}viper-client
-              servicePort: 80
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ $.Values.app.resourcePrefix }}viper-client
+                port:
+                  number: 80
   {{- end -}}
-  {{- end }}
-  {{- if .Values.app.client.ingress.tls }}
-  tls:
-  {{- toYaml .Values.app.client.ingress.tls | nindent 4 }}
   {{- end }}
 status:
   loadBalancer: {}
